--- a/AplicacionDeGestion/vistas/VehiculosUserControl.xaml
+++ b/AplicacionDeGestion/vistas/VehiculosUserControl.xaml
@@ -46,7 +46,7 @@
                 <syncfusion:GridTextColumn MappingName="Id Vehículo" Width="120" ValueBinding="{Binding Path=IdVehiculo}"/>
                 <syncfusion:GridTextColumn MappingName="Id Cliente" Width="120" ValueBinding="{Binding Path=IdCliente}"/>
                 <syncfusion:GridTextColumn MappingName="Matrícula" Width="120" ValueBinding="{Binding Path=Matricula}"/>
-                <syncfusion:GridTextColumn MappingName="Marca" ValueBinding="{Binding Path=IdMarca}"/>
+                <syncfusion:GridTextColumn MappingName="Marca" ValueBinding="{Binding Path=IdMarca, Converter={StaticResource marcaConverter}}"/>
                 <syncfusion:GridTextColumn MappingName="Modelo" ValueBinding="{Binding Path=Modelo}"/>
                 <syncfusion:GridTextColumn MappingName="Tipo" ValueBinding="{Binding Path=Tipo}"/>
             </syncfusion:SfDataGrid.Columns>
