--- a/AplicacionDeGestion/vistas/CrearModificarVehiculoFormulario.xaml
+++ b/AplicacionDeGestion/vistas/CrearModificarVehiculoFormulario.xaml
@@ -19,10 +19,24 @@
             <ColumnDefinition Width="250"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <StackPanel Margin="35,10,35,50" Grid.Column="1" HorizontalAlignment="Center" Orientation="Horizontal">
-            <syncfusion:ButtonAdv Width="80" Margin="5" VerticalAlignment="Bottom" x:Name="AceptarButton" Command="{Binding AceptarCommand}" Click="AceptarButton_Click" IsDefault="True" Label="Aceptar" SmallIcon="/assets/Icons/accept.png">
-            </syncfusion:ButtonAdv>
-            <syncfusion:ButtonAdv Width="80" Margin="5" VerticalAlignment="Bottom" IsCancel="True" Label="Cancelar" SmallIcon="/assets/Icons/cancel.png"></syncfusion:ButtonAdv>
+        <StackPanel Margin="30,5,30,45" Grid.Column="1" HorizontalAlignment="Center" Orientation="Horizontal">
+            <Button  Width="90" Margin="5" Height="25" VerticalAlignment="Bottom" x:Name="AceptarButton" Command="{Binding AceptarCommand}" Click="AceptarButton_Click" IsDefault="True" Template="{DynamicResource ButtonControlTemplate1}" >
+
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="/assets/Icons/accept.png" Margin="-15,0,5,0"></Image>
+                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center">Aceptar</TextBlock>
+                </StackPanel>
+
+            </Button>
+
+            <Button Width="90" Margin="5" Height="25" VerticalAlignment="Bottom" IsCancel="True" Template="{DynamicResource ButtonControlTemplate1}">
+
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="/assets/Icons/cancel.png" Margin="-15,0,5,0"></Image>
+                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center">Cancelar</TextBlock>
+                </StackPanel>
+
+            </Button>
         </StackPanel>
 
         <StackPanel>
