--- a/AplicacionDeGestion/vistas/FinalizacionEstacionamientoDialogo.xaml
+++ b/AplicacionDeGestion/vistas/FinalizacionEstacionamientoDialogo.xaml
@@ -15,6 +15,17 @@
         <Style TargetType="{x:Type TextBlock}">
             <Setter Property="Margin" Value="3,8,0,0"></Setter>
         </Style>
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="Margin" Value="5"></Setter>
+            <Setter Property="Width" Value="90"></Setter>
+            <Setter Property="Height" Value="25"></Setter>
+            <Setter Property="VerticalAlignment" Value="Bottom"></Setter>
+            <Setter Property="Template" Value="{DynamicResource ButtonControlTemplate1}"></Setter>
+        </Style>
+        <Style TargetType="{x:Type TextBlock}" x:Key="TextBlockButton" BasedOn="{StaticResource {x:Type TextBlock}}">
+            <Setter Property="Margin" Value="0"></Setter>
+            <Setter Property="VerticalAlignment" Value="Center"></Setter>
+        </Style>
     </Window.Resources>
     <StackPanel Margin="15">
         <TextBlock Margin="3,0,0,0">ID Estacionamiento</TextBlock>
@@ -29,27 +40,22 @@
         <TextBox Text="{Binding Path=EstacionamientoSeleccionado.Salida}"></TextBox>
         <TextBlock>Tipo</TextBlock>
         <TextBox Text="{Binding Path=EstacionamientoSeleccionado.Tipo}"></TextBox>
-        <TextBlock Margin="3,25,0,0">Importe</TextBlock>
+        <TextBlock Margin="3,20,0,0">Importe</TextBlock>
         <TextBox Text="{Binding Path=EstacionamientoSeleccionado.Importe}"></TextBox>
 
-        <StackPanel Margin="30,40,30,45" Grid.Column="1" HorizontalAlignment="Center" Orientation="Horizontal">
-            <Button  Width="90" Margin="5" Height="25" VerticalAlignment="Bottom" x:Name="AceptarButton" Command="{Binding AceptarCommand}" Click="AceptarButton_Click" IsDefault="True" Template="{DynamicResource ButtonControlTemplate1}" >
-
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="/assets/Icons/accept.png" Margin="-15,0,5,0"></Image>
-                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center">Aceptar</TextBlock>
-                </StackPanel>
-
-            </Button>
-
-            <Button Width="90" Margin="5" Height="25" VerticalAlignment="Bottom" IsCancel="True" Template="{DynamicResource ButtonControlTemplate1}">
-
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="/assets/Icons/cancel.png" Margin="-15,0,5,0"></Image>
-                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center">Cancelar</TextBlock>
-                </StackPanel>
-
-            </Button>
-        </StackPanel>
+        <StackPanel Margin="30,5,30,45" Grid.Column="1" HorizontalAlignment="Center" Orientation="Horizontal">
+        <Button x:Name="AceptarButton" Command="{Binding AceptarCommand}" Click="AceptarButton_Click" IsDefault="True">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="/assets/Icons/accept.png" Margin="-15,0,5,0"></Image>
+                <TextBlock Style="{StaticResource TextBlockButton}">Aceptar</TextBlock>
+            </StackPanel>
+        </Button>
+        <Button IsCancel="True">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="/assets/Icons/cancel.png" Margin="-15,0,5,0"></Image>
+                <TextBlock Style="{StaticResource TextBlockButton}">Cancelar</TextBlock>
+            </StackPanel>
+        </Button>
+    </StackPanel>
     </StackPanel>
 </Window>
