--- a/AplicacionDeGestion/vistas/CrearModificarVehiculoFormulario.xaml
+++ b/AplicacionDeGestion/vistas/CrearModificarVehiculoFormulario.xaml
@@ -62,7 +62,9 @@
                         </ComboBox.ItemTemplate>
                     </ComboBox>
                 </inputLayout:SfTextInputLayout>
-                <Button VerticalAlignment="Top" Margin="5" Width="30" Height="30" Command="{Binding AñadirMarcaCommand}">+</Button>
+                <Button VerticalAlignment="Top" Margin="5" Width="30" Height="30" Command="{Binding AñadirMarcaCommand}" Template="{DynamicResource ButtonControlTemplate2}">
+                    <Image Source="/assets/Icons/mas.png" Stretch="UniformToFill" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                </Button>
             </StackPanel>
            
             <inputLayout:SfTextInputLayout Margin="15,0" Hint="Modelo"                                      
