--- a/AplicacionDeGestion/vistas/CrearModificarVehiculoFormulario.xaml
+++ b/AplicacionDeGestion/vistas/CrearModificarVehiculoFormulario.xaml
@@ -75,12 +75,7 @@
             <StackPanel Orientation="Horizontal" Margin="15,0">
                 <inputLayout:SfTextInputLayout Hint="Tipo"
                                        HintFloatMode="Float">
-                    <ComboBox Width="120" ItemsSource="{Binding ListaTipoVehiculos}" SelectedItem="{Binding TipoVehiculoSeleccionado}">
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Path=Nombre}"></TextBlock>
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
+                    <ComboBox Width="120" ItemsSource="{Binding ListaTipoVehiculos}" SelectedItem="{Binding TipoVehiculoSeleccionado}" Text="{Binding Path=ListaTipoVehiculos}">
                     </ComboBox>
                 </inputLayout:SfTextInputLayout>
             </StackPanel>
